// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CF Writer generateCf config with managed approuter 1`] = `
Object {
  "../minimal-cf/test-cf-project/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
.adp
*.zip",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project\\",
	\\"version\\": \\"1.0.0\\",
	\\"description\\": \\"\\",
	\\"main\\": \\"index.js\\",
	\\"scripts\\": {
		\\"start\\": \\"npm run setup-cf && npm run build && fiori run --open /test/flp.html#app-preview\\",
		\\"start-nobuild\\": \\"fiori run --open /test/flp.html#app-preview\\",
		\\"setup-cf\\": \\"sap-ux add adp-cf-config\\",
		\\"start-editor-nobuild\\": \\"fiori run --open /test/adaptation-editor.html\\",
		\\"start-editor\\": \\"npm run setup-cf && fiori run --open /test/adaptation-editor.html\\",
		\\"build\\": \\"npm run clean && ui5 build --include-task=generateCachebusterInfo && npm run zip\\",
		\\"zip\\": \\"cd dist && npx bestzip ../test-cf-project.zip *\\",
		\\"clean\\": \\"npx rimraf test-cf-project.zip dist\\",
		\\"build-ui5\\": \\"npm explore @ui5/task-adaptation -- npm run rollup\\",
		\\"build-mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive --source ../\\",
		\\"deploy\\": \\"cf deploy ../mta_archives/archive.mtar\\"
	},
	\\"repository\\": {
		\\"type\\": \\"git\\",
		\\"build\\": \\"ui5.js build --verbose --include-task generateCachebusterInfo\\"
	},
	\\"devDependencies\\": {
		\\"@sap-ux/create\\": \\"^0.15.9\\",
		\\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
		\\"@sap-ux/backend-proxy-middleware-cf\\": \\"~0.0.0\\",
		\\"@sapui5/ts-types\\": \\"^1.141.2\\",
		\\"@sap/ux-ui5-tooling\\": \\"1\\",
		\\"@ui5/cli\\": \\"^4.0.33\\",
		\\"@ui5/task-adaptation\\": \\"1.6.0-rc.4\\",
		\\"bestzip\\": \\"^2.2.1\\",
		\\"rimraf\\": \\"^6.1.2\\",
		\\"mbt\\": \\"^1.2.34\\"
	}
}
",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/ui5.yaml": Object {
    "contents": "---
specVersion: \\"3.1\\"
type: application
metadata:
  name: test-cf-project
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        module: test-cf-project
        appHostId: app-host-id
        appName: Base App
        appVersion: 1.0.0
        html5RepoRuntime: runtime-guid
        org: org-guid
        space: space-guid
        sapCloudService: test-solution
        serviceInstanceName: test-service
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        flp:
          theme: sap_horizon
        adp:
          cfBuildPath: dist
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.
#XTIT: Application name
test.namespace_sap.app.title=Test CF App",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"my.test.cf.app\\",
  \\"id\\": \\"test.namespace\\",
  \\"namespace\\": \\"apps/my.test.cf.app/appVariants/test.namespace/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_ui5_setMinUI5Version\\",
      \\"content\\": {
        \\"minUI5Version\\": \\"1.120.0\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "../minimal-cf/xs-security.json": Object {
    "contents": "{
	\\"xsappname\\": \\"test-cf-project\\",
	\\"tenant-mode\\": \\"dedicated\\",
	\\"description\\": \\"Security profile of called application\\",
	\\"scopes\\": [],
	\\"role-templates\\": []
}
",
    "state": "modified",
  },
  "test-cf-project/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
.adp
*.zip",
    "state": "modified",
  },
  "test-cf-project/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project\\",
	\\"version\\": \\"1.0.0\\",
	\\"description\\": \\"\\",
	\\"main\\": \\"index.js\\",
	\\"scripts\\": {
		\\"start\\": \\"npm run setup-cf && npm run build && fiori run --open /test/flp.html#app-preview\\",
		\\"start-nobuild\\": \\"fiori run --open /test/flp.html#app-preview\\",
		\\"setup-cf\\": \\"sap-ux add adp-cf-config\\",
		\\"start-editor-nobuild\\": \\"fiori run --open /test/adaptation-editor.html\\",
		\\"start-editor\\": \\"npm run setup-cf && fiori run --open /test/adaptation-editor.html\\",
		\\"build\\": \\"npm run clean && ui5 build --include-task=generateCachebusterInfo && npm run zip\\",
		\\"zip\\": \\"cd dist && npx bestzip ../test-cf-project.zip *\\",
		\\"clean\\": \\"npx rimraf test-cf-project.zip dist\\",
		\\"build-ui5\\": \\"npm explore @ui5/task-adaptation -- npm run rollup\\",
		\\"build-mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive --source ../\\",
		\\"deploy\\": \\"cf deploy ../mta_archives/archive.mtar\\"
	},
	\\"repository\\": {
		\\"type\\": \\"git\\",
		\\"build\\": \\"ui5.js build --verbose --include-task generateCachebusterInfo\\"
	},
	\\"devDependencies\\": {
		\\"@sap-ux/create\\": \\"^0.15.9\\",
		\\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
		\\"@sap-ux/backend-proxy-middleware-cf\\": \\"~0.0.0\\",
		\\"@sapui5/ts-types\\": \\"^1.141.2\\",
		\\"@sap/ux-ui5-tooling\\": \\"1\\",
		\\"@ui5/cli\\": \\"^4.0.33\\",
		\\"@ui5/task-adaptation\\": \\"1.6.0-rc.4\\",
		\\"bestzip\\": \\"^2.2.1\\",
		\\"rimraf\\": \\"^6.1.2\\",
		\\"mbt\\": \\"^1.2.34\\"
	}
}
",
    "state": "modified",
  },
  "test-cf-project/ui5.yaml": Object {
    "contents": "---
specVersion: \\"3.1\\"
type: application
metadata:
  name: test-cf-project
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        module: test-cf-project
        appHostId: app-host-id
        appName: Base App
        appVersion: 1.0.0
        html5RepoRuntime: runtime-guid
        org: org-guid
        space: space-guid
        sapCloudService: test-solution
        serviceInstanceName: test-service
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        flp:
          theme: sap_horizon
        adp:
          cfBuildPath: dist
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "test-cf-project/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.
#XTIT: Application name
test.namespace_sap.app.title=Test CF App",
    "state": "modified",
  },
  "test-cf-project/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"my.test.cf.app\\",
  \\"id\\": \\"test.namespace\\",
  \\"namespace\\": \\"apps/my.test.cf.app/appVariants/test.namespace/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_ui5_setMinUI5Version\\",
      \\"content\\": {
        \\"minUI5Version\\": \\"1.120.0\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
	\\"xsappname\\": \\"test-cf-project\\",
	\\"tenant-mode\\": \\"dedicated\\",
	\\"description\\": \\"Security profile of called application\\",
	\\"scopes\\": [],
	\\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer generateCf config with options 1`] = `
Object {
  "../managed-approuter/test-cf-project/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
.adp
*.zip",
    "state": "modified",
  },
  "../managed-approuter/test-cf-project/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project\\",
	\\"version\\": \\"1.0.0\\",
	\\"description\\": \\"\\",
	\\"main\\": \\"index.js\\",
	\\"scripts\\": {
		\\"start\\": \\"npm run setup-cf && npm run build && fiori run --open /test/flp.html#app-preview\\",
		\\"start-nobuild\\": \\"fiori run --open /test/flp.html#app-preview\\",
		\\"setup-cf\\": \\"sap-ux add adp-cf-config\\",
		\\"start-editor-nobuild\\": \\"fiori run --open /test/adaptation-editor.html\\",
		\\"start-editor\\": \\"npm run setup-cf && fiori run --open /test/adaptation-editor.html\\",
		\\"build\\": \\"npm run clean && ui5 build --include-task=generateCachebusterInfo && npm run zip\\",
		\\"zip\\": \\"cd dist && npx bestzip ../test-cf-project.zip *\\",
		\\"clean\\": \\"npx rimraf test-cf-project.zip dist\\",
		\\"build-ui5\\": \\"npm explore @ui5/task-adaptation -- npm run rollup\\",
		\\"build-mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive --source ../\\",
		\\"deploy\\": \\"cf deploy ../mta_archives/archive.mtar\\"
	},
	\\"repository\\": {
		\\"type\\": \\"git\\",
		\\"build\\": \\"ui5.js build --verbose --include-task generateCachebusterInfo\\"
	},
	\\"devDependencies\\": {
		\\"@sap-ux/create\\": \\"^0.15.9\\",
		\\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
		\\"@sap-ux/backend-proxy-middleware-cf\\": \\"~0.0.0\\",
		\\"@sapui5/ts-types\\": \\"^1.141.2\\",
		\\"@sap/ux-ui5-tooling\\": \\"1\\",
		\\"@ui5/cli\\": \\"^4.0.33\\",
		\\"@ui5/task-adaptation\\": \\"1.6.0-rc.4\\",
		\\"bestzip\\": \\"^2.2.1\\",
		\\"rimraf\\": \\"^6.1.2\\",
		\\"mbt\\": \\"^1.2.34\\"
	}
}
",
    "state": "modified",
  },
  "../managed-approuter/test-cf-project/ui5.yaml": Object {
    "contents": "---
specVersion: \\"3.1\\"
type: application
metadata:
  name: test-cf-project
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        module: test-cf-project
        appHostId: app-host-id
        appName: Base App
        appVersion: 1.0.0
        html5RepoRuntime: runtime-guid
        org: org-guid
        space: space-guid
        sapCloudService: test-solution
        serviceInstanceName: test-service
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        flp:
          theme: sap_horizon
        adp:
          cfBuildPath: dist
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "../managed-approuter/test-cf-project/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.
#XTIT: Application name
test.namespace_sap.app.title=Test CF App",
    "state": "modified",
  },
  "../managed-approuter/test-cf-project/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"my.test.cf.app\\",
  \\"id\\": \\"test.namespace\\",
  \\"namespace\\": \\"apps/my.test.cf.app/appVariants/test.namespace/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_ui5_setMinUI5Version\\",
      \\"content\\": {
        \\"minUI5Version\\": \\"1.120.0\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "../managed-approuter/xs-security.json": Object {
    "contents": "{
	\\"xsappname\\": \\"test-cf-project\\",
	\\"tenant-mode\\": \\"dedicated\\",
	\\"description\\": \\"Security profile of called application\\",
	\\"scopes\\": [],
	\\"role-templates\\": []
}
",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
.adp
*.zip",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project\\",
	\\"version\\": \\"1.0.0\\",
	\\"description\\": \\"\\",
	\\"main\\": \\"index.js\\",
	\\"scripts\\": {
		\\"start\\": \\"npm run setup-cf && npm run build && fiori run --open /test/flp.html#app-preview\\",
		\\"start-nobuild\\": \\"fiori run --open /test/flp.html#app-preview\\",
		\\"setup-cf\\": \\"sap-ux add adp-cf-config\\",
		\\"start-editor-nobuild\\": \\"fiori run --open /test/adaptation-editor.html\\",
		\\"start-editor\\": \\"npm run setup-cf && fiori run --open /test/adaptation-editor.html\\",
		\\"build\\": \\"npm run clean && ui5 build --include-task=generateCachebusterInfo && npm run zip\\",
		\\"zip\\": \\"cd dist && npx bestzip ../test-cf-project.zip *\\",
		\\"clean\\": \\"npx rimraf test-cf-project.zip dist\\",
		\\"build-ui5\\": \\"npm explore @ui5/task-adaptation -- npm run rollup\\",
		\\"build-mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive --source ../\\",
		\\"deploy\\": \\"cf deploy ../mta_archives/archive.mtar\\"
	},
	\\"repository\\": {
		\\"type\\": \\"git\\",
		\\"build\\": \\"ui5.js build --verbose --include-task generateCachebusterInfo\\"
	},
	\\"devDependencies\\": {
		\\"@sap-ux/create\\": \\"^0.15.9\\",
		\\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
		\\"@sap-ux/backend-proxy-middleware-cf\\": \\"~0.0.0\\",
		\\"@sapui5/ts-types\\": \\"^1.141.2\\",
		\\"@sap/ux-ui5-tooling\\": \\"1\\",
		\\"@ui5/cli\\": \\"^4.0.33\\",
		\\"@ui5/task-adaptation\\": \\"1.6.0-rc.4\\",
		\\"bestzip\\": \\"^2.2.1\\",
		\\"rimraf\\": \\"^6.1.2\\",
		\\"mbt\\": \\"^1.2.34\\"
	}
}
",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/ui5.yaml": Object {
    "contents": "---
specVersion: \\"3.1\\"
type: application
metadata:
  name: test-cf-project
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        module: test-cf-project
        appHostId: app-host-id
        appName: Base App
        appVersion: 1.0.0
        html5RepoRuntime: runtime-guid
        org: org-guid
        space: space-guid
        sapCloudService: test-solution
        serviceInstanceName: test-service
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        flp:
          theme: sap_horizon
        adp:
          cfBuildPath: dist
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.
#XTIT: Application name
test.namespace_sap.app.title=Test CF App",
    "state": "modified",
  },
  "../minimal-cf/test-cf-project/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"my.test.cf.app\\",
  \\"id\\": \\"test.namespace\\",
  \\"namespace\\": \\"apps/my.test.cf.app/appVariants/test.namespace/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_ui5_setMinUI5Version\\",
      \\"content\\": {
        \\"minUI5Version\\": \\"1.120.0\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "../minimal-cf/xs-security.json": Object {
    "contents": "{
	\\"xsappname\\": \\"test-cf-project\\",
	\\"tenant-mode\\": \\"dedicated\\",
	\\"description\\": \\"Security profile of called application\\",
	\\"scopes\\": [],
	\\"role-templates\\": []
}
",
    "state": "modified",
  },
  "test-cf-project-approuter/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project-approuter\\",
	\\"description\\": \\"Node.js based application router service for html5-apps\\",
	\\"engines\\": {
		\\"node\\": \\"^10.0.0\\"
	},
	\\"dependencies\\": {
		\\"@sap/approuter\\": \\"^20.8.0\\"
	},
	\\"scripts\\": {
		\\"start\\": \\"node node_modules/@sap/approuter/approuter.js\\"
	}
}
",
    "state": "modified",
  },
  "test-cf-project-approuter/xs-app.json": Object {
    "contents": "{
	\\"welcomeFile\\": \\"/cp.portal\\",
	\\"authenticationMethod\\": \\"route\\",
	\\"logout\\": {
		\\"logoutEndpoint\\": \\"/do/logout\\"
	},
	\\"routes\\": [
		{
			\\"source\\": \\"^(.*)$\\",
			\\"target\\": \\"$1\\",
			\\"service\\": \\"html5-apps-repo-rt\\",
			\\"authenticationType\\": \\"xsuaa\\"
		}
	]
}
",
    "state": "modified",
  },
  "test-cf-project/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
.adp
*.zip",
    "state": "modified",
  },
  "test-cf-project/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project\\",
	\\"version\\": \\"1.0.0\\",
	\\"description\\": \\"\\",
	\\"main\\": \\"index.js\\",
	\\"scripts\\": {
		\\"start\\": \\"npm run setup-cf && npm run build && fiori run --open /test/flp.html#app-preview\\",
		\\"start-nobuild\\": \\"fiori run --open /test/flp.html#app-preview\\",
		\\"setup-cf\\": \\"sap-ux add adp-cf-config\\",
		\\"start-editor-nobuild\\": \\"fiori run --open /test/adaptation-editor.html\\",
		\\"start-editor\\": \\"npm run setup-cf && fiori run --open /test/adaptation-editor.html\\",
		\\"build\\": \\"npm run clean && ui5 build --include-task=generateCachebusterInfo && npm run zip\\",
		\\"zip\\": \\"cd dist && npx bestzip ../test-cf-project.zip *\\",
		\\"clean\\": \\"npx rimraf test-cf-project.zip dist\\",
		\\"build-ui5\\": \\"npm explore @ui5/task-adaptation -- npm run rollup\\",
		\\"build-mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive --source ../\\",
		\\"deploy\\": \\"cf deploy ../mta_archives/archive.mtar\\"
	},
	\\"repository\\": {
		\\"type\\": \\"git\\",
		\\"build\\": \\"ui5.js build --verbose --include-task generateCachebusterInfo\\"
	},
	\\"devDependencies\\": {
		\\"@sap-ux/create\\": \\"^0.15.9\\",
		\\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
		\\"@sap-ux/backend-proxy-middleware-cf\\": \\"~0.0.0\\",
		\\"@sapui5/ts-types\\": \\"^1.141.2\\",
		\\"@sap/ux-ui5-tooling\\": \\"1\\",
		\\"@ui5/cli\\": \\"^4.0.33\\",
		\\"@ui5/task-adaptation\\": \\"1.6.0-rc.4\\",
		\\"bestzip\\": \\"^2.2.1\\",
		\\"rimraf\\": \\"^6.1.2\\",
		\\"mbt\\": \\"^1.2.34\\"
	}
}
",
    "state": "modified",
  },
  "test-cf-project/ui5.yaml": Object {
    "contents": "---
specVersion: \\"3.1\\"
type: application
metadata:
  name: test-cf-project
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        module: test-cf-project
        appHostId: app-host-id
        appName: Base App
        appVersion: 1.0.0
        html5RepoRuntime: runtime-guid
        org: org-guid
        space: space-guid
        sapCloudService: test-solution
        serviceInstanceName: test-service
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        flp:
          theme: sap_horizon
        adp:
          cfBuildPath: dist
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "test-cf-project/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.
#XTIT: Application name
test.namespace_sap.app.title=Test CF App",
    "state": "modified",
  },
  "test-cf-project/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"my.test.cf.app\\",
  \\"id\\": \\"test.namespace\\",
  \\"namespace\\": \\"apps/my.test.cf.app/appVariants/test.namespace/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_ui5_setMinUI5Version\\",
      \\"content\\": {
        \\"minUI5Version\\": \\"1.120.0\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
	\\"xsappname\\": \\"test-cf-project\\",
	\\"tenant-mode\\": \\"dedicated\\",
	\\"description\\": \\"Security profile of called application\\",
	\\"scopes\\": [],
	\\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer generateCf minimal config 1`] = `
Object {
  "test-cf-project/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
.adp
*.zip",
    "state": "modified",
  },
  "test-cf-project/package.json": Object {
    "contents": "{
	\\"name\\": \\"test-cf-project\\",
	\\"version\\": \\"1.0.0\\",
	\\"description\\": \\"\\",
	\\"main\\": \\"index.js\\",
	\\"scripts\\": {
		\\"start\\": \\"npm run setup-cf && npm run build && fiori run --open /test/flp.html#app-preview\\",
		\\"start-nobuild\\": \\"fiori run --open /test/flp.html#app-preview\\",
		\\"setup-cf\\": \\"sap-ux add adp-cf-config\\",
		\\"start-editor-nobuild\\": \\"fiori run --open /test/adaptation-editor.html\\",
		\\"start-editor\\": \\"npm run setup-cf && fiori run --open /test/adaptation-editor.html\\",
		\\"build\\": \\"npm run clean && ui5 build --include-task=generateCachebusterInfo && npm run zip\\",
		\\"zip\\": \\"cd dist && npx bestzip ../test-cf-project.zip *\\",
		\\"clean\\": \\"npx rimraf test-cf-project.zip dist\\",
		\\"build-ui5\\": \\"npm explore @ui5/task-adaptation -- npm run rollup\\",
		\\"build-mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive --source ../\\",
		\\"deploy\\": \\"cf deploy ../mta_archives/archive.mtar\\"
	},
	\\"repository\\": {
		\\"type\\": \\"git\\",
		\\"build\\": \\"ui5.js build --verbose --include-task generateCachebusterInfo\\"
	},
	\\"devDependencies\\": {
		\\"@sap-ux/create\\": \\"^0.15.9\\",
		\\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
		\\"@sap-ux/backend-proxy-middleware-cf\\": \\"~0.0.0\\",
		\\"@sapui5/ts-types\\": \\"^1.141.2\\",
		\\"@sap/ux-ui5-tooling\\": \\"1\\",
		\\"@ui5/cli\\": \\"^4.0.33\\",
		\\"@ui5/task-adaptation\\": \\"1.6.0-rc.4\\",
		\\"bestzip\\": \\"^2.2.1\\",
		\\"rimraf\\": \\"^6.1.2\\",
		\\"mbt\\": \\"^1.2.34\\"
	}
}
",
    "state": "modified",
  },
  "test-cf-project/ui5.yaml": Object {
    "contents": "---
specVersion: \\"3.1\\"
type: application
metadata:
  name: test-cf-project
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        module: test-cf-project
        appHostId: app-host-id
        appName: Base App
        appVersion: 1.0.0
        html5RepoRuntime: runtime-guid
        org: org-guid
        space: space-guid
        sapCloudService: test-solution
        serviceInstanceName: test-service
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        flp:
          theme: sap_horizon
        adp:
          cfBuildPath: dist
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "test-cf-project/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.
#XTIT: Application name
test.namespace_sap.app.title=Test CF App",
    "state": "modified",
  },
  "test-cf-project/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"my.test.cf.app\\",
  \\"id\\": \\"test.namespace\\",
  \\"namespace\\": \\"apps/my.test.cf.app/appVariants/test.namespace/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_ui5_setMinUI5Version\\",
      \\"content\\": {
        \\"minUI5Version\\": \\"1.120.0\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
	\\"xsappname\\": \\"test-cf-project\\",
	\\"tenant-mode\\": \\"dedicated\\",
	\\"description\\": \\"Security profile of called application\\",
	\\"scopes\\": [],
	\\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;
